<h5>2.61 Beta 1  [2020-11-10]</h5>  Dev: Xoops 2.5.11, PHP 7.4.22, PHP 8.0.8
<hr>
- cosmetics

<h5>2.60 Final  [2020-11-10]</h5>  Dev: Xoops 2.5.11, PHP 7.4.12, PHP 8.0 RC 3
<hr>
- added Blocksadmin (mamba)
- added test data (mamba)
- added import sample data buttons (mamba)
- replaced index.html with index.php (geekwright/mamba)
- PHP 8 tests (mamba)
- code cosmetics


<h5>2.60 Beta 2  [2019-07-28]</h5>  Dev: Xoops 2.5.10, PHP 7.3.7
<hr>
- namespaces, autoloading (mamba)
- XMF (mamba)
- cosmetics (mamba)
- PhpDocs (mamba)


<h5>2.60 Beta 1  [2018-01-19]</h5>  Dev: Xoops 2.5.9, PHP 7.2.1
<hr>
- namespaces, autoloading (mamba)


<h5>2.50 RC 1       [2016-03-23]</h5>
<hr>
- updates for XOOPS 2.5.8 and PHP 7 (mamba)


<h5>2.50 Beta 1       [2014-04-23]</h5>
<hr>
- moved all images, CSS, and JS files to /assets (mamba)
- renamed .html Smarty templates to .tpl (mamba)


<h5>2.49 Final  [2011/12/12] </h5>
<hr>
- updated to ModuleClasses 1.1 (mamba)
- added ColorPicker to form (mamba)
- added update.php to increase background color size in DB


<h5>2.48 [2011/02/23]</h5>
<hr>
- updated GUI to XOOPS Standard  (mamba)


<h5>2.47</h5>
<hr>
- You can use different editors (not only kiovi)


<h5>2.46</h5>
<hr>
- Bugs corrections


<h5>2.42</h5>
<hr>
- I have replaced the PHP glob() function with another one (because of some hosts)
- I have corrected a bug in the administration's menu (bad link)


<h5>2.41</h5>
<hr>
- Two new plugins, one for article 0.95 and another one for TplLeagueStats 1 - thank you very much Defkon1 !


<h5>2.4</h5>
<hr>
- I have added a plugin for catads


<h5>2.0 & 2.2</h5>
<hr>
- You can use kiovi to create, in the module's admin part, kiovi to create your marquees
- If the module detects that a web spyder is reading its content then it will replace the marquees with pure text
- You can add blocks on-fly as following (so it means that you can create as many marquees as you want, not only 4).