@@ -1,4 +1,8 @@
-<h5>2.61 Beta 1  [2020-11-10]</h5>  Dev: Xoops 2.5.11, PHP 7.4.22, PHP 8.0.8
+<h5>2.61.0 Beta 2  [2022-02-20]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.27, PHP 8.0.16
+<hr>
+- index.html in /preloads (mamba)
+
+<h5>2.61.0 Beta 1  [2020-11-10]</h5>  Dev: Xoops 2.5.11, PHP 7.4.22, PHP 8.0.8
 <hr>
 - cosmetics
 
